--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://AsifKhan50.github.io/",
+  "homepage": "https://AsifKhan50.github.io/Khans-sons",
   "name": "ecommerceapp",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
